# My-book-Hackathon

./: .dockerignore  .gitignore  demo_pipeline.py  p.txt  sitemap.xml  test_implementation.py
.claude/: settings.local.json
.github/workflows/: ros2-docusaurus-ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: README.md  agent.py  app.py  config.py  main.py  pyproject.toml  rag_bot.py  requirements.txt  retrieve.py  test_integration.py  test_query_format.py
backend/tests/: conftest.py  test_main.py
content/chapters/: module1-ros2-nodes-graph.md  module2-digital-twin.md  module3-ai-robot-brain.md
gazebo_sim/models/simple_robot/: model.config  model.sdf
gazebo_sim/worlds/: empty.world
history/prompts/1-book-specification/: 1-clarify-spec-data-model.spec.prompt.md
history/prompts/1-docusaurus-book-spec/: 20251207-implement-ros2-nodes-graph-module.red.prompt.md  4-clarify-module-1-docusaurus-book-spec.spec.prompt.md
history/prompts/1-embedding-pipeline/: 001-implementation-execution.tasks.prompt.md  002-rag-bot-integration.tasks.prompt.md  1-embedding-pipeline-setup.spec.prompt.md  2-backend-pipeline-implementation.plan.prompt.md  2-qdrant-retrieval-system-implementation-plan.plan.prompt.md  3-backend-pipeline-implementation.green.prompt.md  3-implement-qdrant-retrieval-system.implement.prompt.md  4-backend-pipeline-testing.green.prompt.md
history/prompts/1-floating-chatbot/: 1-create-floating-chatbot-spec.spec.prompt.md  2-implement-floating-chatbot-ui.implement.prompt.md  3-fix-qdrant-integration-bugs.implement.prompt.md  4-implement-floating-chatbot-ui.implement.prompt.md
history/prompts/1-openai-agent-qdrant-retrieval/: 1-openai-agent-qdrant-retrieval-specification.spec.prompt.md  2-openai-agent-qdrant-retrieval-plan.plan.prompt.md
history/prompts/1-python-data-science-book/: 0002-create-python-data-science-book-specification.spec.prompt.md  1701700000-generate-docusaurus-textbook-tasks.tasks.prompt.md
history/prompts/1-rag-bot/: 1-create-rag-bot-specification.spec.prompt.md  2-create-rag-bot-implementation-plan.plan.prompt.md  (+1 more)
isaac_sim_projects/: README.md
isaac_sim_projects/scenes/: humanoid_robot_lab.usd
isaac_sim_projects/scripts/: generate_synthetic_data.py
jetson_deployment/: README.md
jetson_deployment/scripts/: deploy_isaac_ros.sh  deploy_nav2.sh
python-data-science-book/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
python-data-science-book/docs/physical-ai/: index.md  (+1 more)
ros2_ws/src/nav2_bringup_humanoid/: package.xml  setup.py
ros2_ws/src/nav2_bringup_humanoid/config/: nav2_params.yaml
ros2_ws/src/nav2_bringup_humanoid/launch/: humanoid_nav2_bringup.launch.py
ros2_ws/src/navigate_action_client_pkg/: CMakeLists.txt  navigate_action_client.py  package.xml  setup.py
ros2_ws/src/navigate_action_client_pkg/src/: navigate_action_client.cpp
ros2_ws/src/navigate_action_server_pkg/: CMakeLists.txt  navigate_action_server.py  package.xml  setup.py
ros2_ws/src/navigate_action_server_pkg/src/: navigate_action_server.cpp
ros2_ws/src/publisher_pkg/: CMakeLists.txt  package.xml  publisher_node.py  setup.py
ros2_ws/src/publisher_pkg/src/: publisher_node.cpp
ros2_ws/src/subscriber_pkg/: CMakeLists.txt  package.xml  setup.py  subscriber_node.py
ros2_ws/src/subscriber_pkg/src/: subscriber_node.cpp
specs/1-book-specification/: spec.md
specs/1-docusaurus-book-spec/: plan.md  research.md  spec.md  tasks.md
specs/1-embedding-pipeline/: data-model.md  quickstart.md  research.md  spec.md  tasks.md  test_retrieval.py
specs/1-floating-chatbot/: spec.md
specs/1-openai-agent-qdrant-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/1-python-data-science-book/: plan.md  spec.md  tasks.md
specs/1-rag-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/2-digital-twin-gazebo-unity/: plan.md  spec.md  tasks.md
specs/3-ai-robot-brain-nvidia-isaac/: plan.md  spec.md  tasks.md
specs/4-home-page-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/4-vision-language-action-vla/: plan.md  spec.md  tasks.md
unity_sim/: README.md
(+74 files in other folders)
