[project]
name = "embedding-pipeline"
version = "0.1.0"
description = "Embedding pipeline for Docusaurus documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "cohere>=4.0.0",
    "qdrant-client>=1.8.0",
    "python-dotenv>=1.0.0",
    "Flask>=2.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"