<?xml version="1.0"?>
<package format="3">
  <name>navigate_action_server_pkg</name>
  <version>0.0.0</version>
  <description>A simple action server package</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>example_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
